Fix console messages spacing

--- a/bwma_rubik_style.scss
+++ b/bwma_rubik_style.scss
@@ -528,10 +528,8 @@ div.comment, div.node {
 }
 
 #console {
-  margin-top: 10px;
-
   .messages {
-    margin: 0;
+    margin-top: 10px;
   }
 }
 
